# VeriVynx

./: .env.example  LICENSE  README.md  k.py  main.py  pyproject.toml  requirements.txt
docs/: CNAME  README.md
src/: README.md
src/cogs/: b.c  guild_handler.c  guild_handler.py  help.c  help.py  member_handler.c  member_handler.py  settings.c  settings.py  slash_sheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeesh.py
src/cogs/db/: db.json
src/cogs/utils/: slash.py
